--- a/ITS.CloudDev2025.API/appsettings.json
+++ b/ITS.CloudDev2025.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BlobStorage": {
+    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=your_account_name;AccountKey=your_account_key;EndpointSuffix=core.windows.net",
+    "CustomerTableName": "your_customer_table_name"
+  }
 }
